--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <img src="./sort 1.png">
     <h2>Sortear um número</h2>
-     <div>
+     <div class="inputs">
            <input placeholder="entre" type="number" class="input-min">
            <input placeholder="e" type="number" class="input-max">
       </div>
